--- a/components/comment/commentAdd/commentAdd.wxss
+++ b/components/comment/commentAdd/commentAdd.wxss
@@ -21,7 +21,7 @@
 }
 .commentAdd-content > view {
 	padding: 20px;
-    display: flex;
+	display: flex;
 	align-items: center;
 }
 
@@ -47,7 +47,7 @@
 }
 .commentAdd-input > .commentAdd-btn {
 	margin-left: auto;
-    
+
 	flex-shrink: 0;
 	height: 2em;
 	width: 2em;
@@ -55,8 +55,31 @@
 	background-repeat: no-repeat;
 }
 .commentAdd-pic {
-    height: 2em;
-    width: 2em;
-    margin: 0 .5em;
-	background-image: url("data:image/svg+xml,%3Csvg t='1700125179574' class='icon' viewBox='0 0 1024 1024' version='1.1' xmlns='http://www.w3.org/2000/svg' p-id='18388' width='1.8em' height='1.8em'%3E%3Cpath d='M853.333333 170.666667H170.666667a85.333333 85.333333 0 0 0-85.333334 85.333333v512a85.333333 85.333333 0 0 0 85.333334 85.333333h682.666666a85.333333 85.333333 0 0 0 85.333334-85.333333V256a85.333333 85.333333 0 0 0-85.333334-85.333333z m0 547.413333a20.906667 20.906667 0 0 1-21.333333 21.333333 20.48 20.48 0 0 1-17.066667-8.533333l-189.866666-253.013333a21.76 21.76 0 0 0-34.133334 0L469.333333 636.16a21.76 21.76 0 0 1-17.066666 8.533333 20.906667 20.906667 0 0 1-16.213334-7.68l-63.146666-74.666666a21.333333 21.333333 0 0 0-16.64-7.68 22.186667 22.186667 0 0 0-16.64 8.106666l-130.986667 168.106667a20.48 20.48 0 0 1-16.64 8.106667 20.906667 20.906667 0 0 1-21.333333-21.333334V256h682.666666zM341.333333 405.333333A64 64 0 1 1 405.333333 469.333333 64 64 0 0 1 341.333333 405.333333z' p-id='18389' fill='%238a8a8a'%3E%3C/path%3E%3C/svg%3E");    background-repeat: no-repeat;
+	height: 2em;
+	width: 2em;
+	margin: 0 0.5em;
+	background-image: url("data:image/svg+xml,%3Csvg t='1700125179574' class='icon' viewBox='0 0 1024 1024' version='1.1' xmlns='http://www.w3.org/2000/svg' p-id='18388' width='1.8em' height='1.8em'%3E%3Cpath d='M853.333333 170.666667H170.666667a85.333333 85.333333 0 0 0-85.333334 85.333333v512a85.333333 85.333333 0 0 0 85.333334 85.333333h682.666666a85.333333 85.333333 0 0 0 85.333334-85.333333V256a85.333333 85.333333 0 0 0-85.333334-85.333333z m0 547.413333a20.906667 20.906667 0 0 1-21.333333 21.333333 20.48 20.48 0 0 1-17.066667-8.533333l-189.866666-253.013333a21.76 21.76 0 0 0-34.133334 0L469.333333 636.16a21.76 21.76 0 0 1-17.066666 8.533333 20.906667 20.906667 0 0 1-16.213334-7.68l-63.146666-74.666666a21.333333 21.333333 0 0 0-16.64-7.68 22.186667 22.186667 0 0 0-16.64 8.106666l-130.986667 168.106667a20.48 20.48 0 0 1-16.64 8.106667 20.906667 20.906667 0 0 1-21.333333-21.333334V256h682.666666zM341.333333 405.333333A64 64 0 1 1 405.333333 469.333333 64 64 0 0 1 341.333333 405.333333z' p-id='18389' fill='%238a8a8a'%3E%3C/path%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+}
+.commentAdd-pics {
+	display: flex;
+	gap: 6px;
+}
+.commentAdd-pics-item {
+	margin-top: 10px;
+	width: 33%;
+	padding-top: 30%;
+	height: 0;
+	position: relative;
+}
+.commentAdd-pics-item > image {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	object-fit: cover;
+	border-radius: 8px;
+	box-shadow: 0px 0.5px 0.5px #efefef, 0px 1px 0.5px rgba(239, 239, 239, 0.5);
 }
