--- a/components/comment/commentDetail/commentDetail.wxss
+++ b/components/comment/commentDetail/commentDetail.wxss
@@ -59,10 +59,10 @@
 	align-items: center;
 }
 .detail-comment-item-t > image {
-	height: 50px;
-	width: 50px;
+	height: 40px;
+	width: 40px;
 	border-radius: 50%;
-	margin: 0 20px;
+	margin: 0 10px;
 }
 .detail-comment-t-user > view {
 	font-size: 1em;
@@ -188,9 +188,10 @@
 	font-size: 0.8em;
 }
 .comment-2-user image {
-	height: 39px;
-	width: 39px;
-	border-radius: 50%;
+	height: 33px;
+    width: 33px;
+    margin-right: 8px;
+    border-radius: 50%;
 }
 .comment-2-user > text {
 	margin-left: auto;
