--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -4,6 +4,7 @@
 .detail-content {
 	overflow: auto;
 	background: #f3f4f8;
+	min-height: 100vh;
 }
 .detail-card {
 	background: #fff;
@@ -129,10 +130,10 @@
 	align-items: center;
 }
 .detail-comment-item-t > image {
-	height: 60px;
-	width: 60px;
-	border-radius: 50%;
-	margin-right: 3px;
+	height: 39px;
+    width: 39px;
+    border-radius: 50%;
+    margin: 11px;
 }
 .detail-comment-t-user > view {
 	font-size: 1em;
