--- a/pages/submit/submit.wxss
+++ b/pages/submit/submit.wxss
@@ -63,16 +63,16 @@
   border-radius: 19px;
 }
 
-.submit-radio.man.active {
-  background-image: linear-gradient(90deg, #5468eb, #8289f9);
+.submit-radio.b.active {
+	background-image: linear-gradient(90deg, #5468eb, #8289f9);
   color: #fff;
 }
-.submit-radio.woman.active {
+.submit-radio.p.active {
   background-image: linear-gradient(90deg, #ec69c1, #f58ee0e8);
   color: #fff;
 }
-.submit-radio.none.active {
-  background-image: linear-gradient(90deg, #a8e039, #38eb38e8);
+.submit-radio.g.active {
+	background-image: linear-gradient(90deg, #94c0e7, #70b0e9);
   color: #fff;
 }
 .submit-add {
@@ -83,4 +83,36 @@
   background-image: linear-gradient(90deg, #94c0e7, #70b0e9);
   color: #fff;
   padding: 12px 0;
+}
+.upload-pic-list {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 10px;
+	margin-top: 10px;
+}
+
+.upload-pic-item image {
+	height: 100%;
+	width: 100%;
+}
+.upload-pic-item.upload-pic-btn {
+	background-color: #f7f7f7;
+	position: relative;
+}
+.upload-pic-btn::before,
+.upload-pic-btn::after {
+	position: absolute;
+	content: "";
+	width: 30%;
+	height: 2px;
+	border-radius: 2px;
+	top: 50%;
+	left: 50%;
+	background-color: #817f7f;
+}
+.upload-pic-btn::before {
+	transform: translate(-50%, -50%);
+}
+.upload-pic-btn::after {
+	transform: translate(-50%, -50%) rotate(90deg);
 }
